[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.95"
debug = true

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
is_executable = "1.0.5"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
thiserror = "1.0.38"                             # error handling
